// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Снапшот-тесты снапшот MetersListPage с мок-стором 1`] = `
<DocumentFragment>
  <div
    class="sc-fKFxPF bkRtYU"
  >
    <h1
      class="sc-bBXraC flcVrg"
    >
      Список счётчиков
    </h1>
    <div
      class="sc-jrAIFA hgZOzc"
    >
      <div
        class="sc-kEjckD gJHGys"
      >
        <span
          class="sc-iqHZue ivkOdp"
        >
          №
        </span>
        <span
          class="sc-iqHZue cgBSYw"
        >
          Тип
        </span>
        <span
          class="sc-iqHZue dtZney"
        >
          Дата установки
        </span>
        <span
          class="sc-iqHZue cgBSYw"
        >
          Автоматический
        </span>
        <span
          class="sc-iqHZue dtZney"
        >
          Текущие показания
        </span>
        <span
          class="sc-iqHZue YXEYj"
        >
          Адрес
        </span>
        <span
          class="sc-iqHZue YXEYj"
        >
          Примечание
        </span>
        <span
          class="sc-iqHZue hCYHBI"
        />
      </div>
      <div
        class="sc-crrrsl cRBBMB"
      >
        <table
          class="sc-dQoBM likOJx"
        >
          <thead
            class="sc-bqyIgP JUPDU"
          >
            <tr>
              <th
                class="sc-kstoPm inXOvH"
              >
                №
              </th>
              <th
                class="sc-kstoPm gzBGKa"
              >
                Тип
              </th>
              <th
                class="sc-kstoPm kSqME"
              >
                Дата установки
              </th>
              <th
                class="sc-kstoPm gzBGKa"
              >
                Автоматический
              </th>
              <th
                class="sc-kstoPm kSqME"
              >
                Текущие показания
              </th>
              <th
                class="sc-kstoPm mqvhO"
              >
                Адрес
              </th>
              <th
                class="sc-kstoPm mqvhO"
              >
                Примечание
              </th>
              <th
                class="sc-kstoPm kpHyky"
              />
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-hBFaCF gsRsap"
            >
              <td
                class="sc-fodXMg iHcXEw"
              >
                1
              </td>
              <td
                class="sc-fodXMg sc-fFubTW CZgDN"
              >
                <span
                  class="sc-bkAakD LcpJI"
                >
                  <img
                    alt=""
                    class="sc-idOkdQ ytrFK"
                    src="/icons/hvs.svg"
                  />
                  ХВС
                </span>
              </td>
              <td
                class="sc-fodXMg eLxrJb"
              >
                01.01.2024
              </td>
              <td
                class="sc-fodXMg CZgDN"
              >
                Нет
              </td>
              <td
                class="sc-fodXMg eLxrJb"
              >
                0
              </td>
              <td
                class="sc-fodXMg cIvHYh"
              >
                ул. Тестовая, 1, кв. 1
              </td>
              <td
                class="sc-fodXMg cIvHYh"
              />
              <td
                class="sc-fodXMg sc-dIUiux bmZhiR hZhlXw"
              >
                <button
                  class="sc-bdfDLd fZIEJZ delete-button"
                  disabled=""
                  type="button"
                >
                  <img
                    alt="Удалить"
                    class="sc-gsTDHW hJCXVh"
                    src="/icons/trash.svg"
                  />
                </button>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Снапшот-тесты снапшот MetersTable с тестовыми данными 1`] = `
<DocumentFragment>
  <div
    class="sc-jrAIFA hgZOzc"
  >
    <div
      class="sc-kEjckD gJHGys"
    >
      <span
        class="sc-iqHZue ivkOdp"
      >
        №
      </span>
      <span
        class="sc-iqHZue cgBSYw"
      >
        Тип
      </span>
      <span
        class="sc-iqHZue dtZney"
      >
        Дата установки
      </span>
      <span
        class="sc-iqHZue cgBSYw"
      >
        Автоматический
      </span>
      <span
        class="sc-iqHZue dtZney"
      >
        Текущие показания
      </span>
      <span
        class="sc-iqHZue YXEYj"
      >
        Адрес
      </span>
      <span
        class="sc-iqHZue YXEYj"
      >
        Примечание
      </span>
      <span
        class="sc-iqHZue hCYHBI"
      />
    </div>
    <div
      class="sc-crrrsl cRBBMB"
    >
      <table
        class="sc-dQoBM likOJx"
      >
        <thead
          class="sc-bqyIgP JUPDU"
        >
          <tr>
            <th
              class="sc-kstoPm inXOvH"
            >
              №
            </th>
            <th
              class="sc-kstoPm gzBGKa"
            >
              Тип
            </th>
            <th
              class="sc-kstoPm kSqME"
            >
              Дата установки
            </th>
            <th
              class="sc-kstoPm gzBGKa"
            >
              Автоматический
            </th>
            <th
              class="sc-kstoPm kSqME"
            >
              Текущие показания
            </th>
            <th
              class="sc-kstoPm mqvhO"
            >
              Адрес
            </th>
            <th
              class="sc-kstoPm mqvhO"
            >
              Примечание
            </th>
            <th
              class="sc-kstoPm kpHyky"
            />
          </tr>
        </thead>
        <tbody>
          <tr
            class="sc-hBFaCF gsRsap"
          >
            <td
              class="sc-fodXMg iHcXEw"
            >
              1
            </td>
            <td
              class="sc-fodXMg sc-fFubTW CZgDN"
            >
              <span
                class="sc-bkAakD LcpJI"
              >
                <img
                  alt=""
                  class="sc-idOkdQ ytrFK"
                  src="/icons/hvs.svg"
                />
                ХВС
              </span>
            </td>
            <td
              class="sc-fodXMg eLxrJb"
            >
              10.05.2024
            </td>
            <td
              class="sc-fodXMg CZgDN"
            >
              Да
            </td>
            <td
              class="sc-fodXMg eLxrJb"
            >
              100
            </td>
            <td
              class="sc-fodXMg cIvHYh"
            >
              ул. Мира, 5, кв. 12
            </td>
            <td
              class="sc-fodXMg cIvHYh"
            />
            <td
              class="sc-fodXMg sc-dIUiux bmZhiR hZhlXw"
            >
              <button
                class="sc-bdfDLd fZIEJZ delete-button"
                type="button"
              >
                <img
                  alt="Удалить"
                  class="sc-gsTDHW hJCXVh"
                  src="/icons/trash.svg"
                />
              </button>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
